feat(): ng frontend served by API server

--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "start": "ts-node -r tsconfig-paths/register src/main.ts",
+    "format": "prettier --write \"api-src/**/*.ts\"",
+    "start": "ts-node -r tsconfig-paths/register api-src/main.ts",
     "start:dev": "nodemon",
     "start:debug": "nodemon --config nodemon-debug.json",
-    "prestart:prod": "rimraf dist && npm run build",
-    "start:prod": "node dist/main.js",
+    "prestart:prod": "rimraf dist/server && npm run build",
+    "start:prod": "node dist/server/main.js",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -20,12 +20,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@angular/cli": "^7.3.9",
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
     "axios": "^0.18.0",
     "emailjs-imap-client": "^3.0.7",
     "form-data": "^2.3.3",
+    "nest-router": "^1.0.9",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
